# Agrobot

./: .gitignore  CMakeLists.txt  README.md  compv_handler.cpp  compv_handler.h  connection_handler.cpp  connection_handler.h  enet_handler.cpp  enet_handler.h  ik_wrapper.cpp  ik_wrapper.h  log.txt  main.cpp  onltrack_handler.cpp  onltrack_handler.h  robot_api.cpp  robot_api.h  tests.cpp  tests.h  transform_calc.cpp  transform_calc.h
Dependencies/matlab-ik/: Matlab_ik.cpp  Matlab_ik.h  Matlab_ik_types.h  buildInfo.mat  coder_posix_time.c  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
Dependencies/matlab-ik-ARM/: Matlab_ik.cpp  Matlab_ik.h  Matlab_ik_types.h  buildInfo.mat  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
Hyundai_Backup/15_10_2024/MB/: 0002.JOB  0003.JOB  0006.JOB  0008.JOB  0012.JOB  0013.JOB  HISTORY.TXT  ROBOT.CON  ROBOT.INF  ROBOT.OPR  ROBOT.VAR
Hyundai_Backup/15_10_2024/TP/: AutoRunChkBin.txt  ChkBinTP.txt  autorun.cfg
Hyundai_Backup/15_10_2024/TP/backup/b20241015_0844/: HISTORY.TXT  ROBOT.CON  ROBOT.ERR  ROBOT.INF  ROBOT.MCH  ROBOT.OPR  ROBOT.STP
Hyundai_Backup/15_10_2024/TP/backup/b20241015_0848/: G1_00.POS  HISTORY.TXT  ROBOT.ERR  ROBOT.INF  ROBOT.MCH  ROBOT.OPR  ROBOT.RLY  ROBOT.STP  ROBOT.VAR
Hyundai_Backup/15_10_2024/TP/cfg/: MngPane.cfg  RecCond.cfg  TpOption.cfg
Hyundai_Backup/15_10_2024/TP/log/: HISTORY_0.TXT  HISTORY_1.TXT  HISTORY_2.TXT
(+20 files in other folders)
